<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".Learn">

    <androidx.constraintlayout.widget.ConstraintLayout

        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
            android:id="@+id/youTubePlayerView2"
            android:layout_width="406dp"
            android:layout_height="227dp"
            app:autoPlay="false"
            app:layout_constraintBottom_toTopOf="@+id/gotoTrans"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.454"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.005"
            app:showYouTubeButton="false"
            app:videoId="v1desDduz5M" />


        <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
            android:id="@+id/youTubePlayerView4"
            android:layout_width="406dp"
            android:layout_height="227dp"
            app:autoPlay="false"
            app:layout_constraintBottom_toTopOf="@+id/gotoTrans"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/youTubePlayerView2"
            app:layout_constraintVertical_bias="0.109"
            app:showYouTubeButton="false"
            app:videoId="a5BD8SjhPSg" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/linktosite"
            app:layout_constraintBottom_toTopOf="@+id/gotoTrans"
            app:layout_constraintEnd_toEndOf="@+id/youTubePlayerView4"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/youTubePlayerView4"
            app:layout_constraintTop_toBottomOf="@+id/youTubePlayerView4"
            app:layout_constraintVertical_bias="0.10" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/udemy"
            app:layout_constraintBottom_toTopOf="@+id/gotoTrans"
            app:layout_constraintEnd_toEndOf="@+id/textView"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintVertical_bias="0.10" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lynda"
            app:layout_constraintBottom_toTopOf="@+id/gotoTrans"
            app:layout_constraintEnd_toEndOf="@+id/textView1"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/textView1"
            app:layout_constraintTop_toBottomOf="@+id/textView1"
            app:layout_constraintVertical_bias="0.10" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edx"
            app:layout_constraintBottom_toTopOf="@+id/gotoTrans"
            app:layout_constraintEnd_toEndOf="@+id/textView2"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:layout_constraintVertical_bias="0.10" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/skillshare"
            app:layout_constraintBottom_toTopOf="@+id/gotoTrans"
            app:layout_constraintEnd_toEndOf="@+id/textView3"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            app:layout_constraintVertical_bias="0.10" />
        <Button
            android:id="@+id/gotoLearn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="LEARN"
            android:background="#07D6FA"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.05"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.976" />

        <Button
            android:id="@+id/gotoMAP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Maps"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.95"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.976" />

        <Button
            android:id="@+id/gotoTrans"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Translation"
            android:textSize="10sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.976" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>